--- a/app/views/users/basic-details.html
+++ b/app/views/users/basic-details.html
@@ -27,7 +27,7 @@
         {% call govukFieldset({
             legend: {
               html: h1,
-              classes: "govuk-fieldset__legend--xl",
+              classes: "govuk-fieldset__legend--xl govuk-!-margin-bottom-6",
               isPageHeading: true
             }
           }) %}
