--- a/app/views/users/manage-courses-1.html
+++ b/app/views/users/manage-courses-1.html
@@ -32,7 +32,8 @@
             }
           },
           hint: {
-            text: "This includes creating, editing, withdrawing and closing courses."
+            text: "This includes creating, editing, withdrawing and closing courses.",
+            classes: "govuk-!-margin-bottom-6"
           },
           items: [
             {
@@ -42,7 +43,7 @@
             },
             {
               value: "no",
-              text: "No, grant read-only access for this user",
+              text: "No, view access only for this user",
               checked: checked("manage-courses-1", "no")
             }
           ]
