--- a/app/views/users/organisations.html
+++ b/app/views/users/organisations.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Select organisations this user can access' %}
+{% set title = 'Select the organisations this user can access' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% set navActive = 'users' %}
 
@@ -28,7 +28,7 @@
             legend: {
               html: h1,
               isPageHeading: true,
-              classes: "govuk-fieldset__legend--xl"
+              classes: "govuk-fieldset__legend--xl govuk-!-margin-bottom-6"
             }
           },
           items: [
