--- a/app/views/users/manage-users-2.html
+++ b/app/views/users/manage-users-2.html
@@ -32,7 +32,8 @@
             }
           },
           hint: {
-            text: "This includes inviting and removing users and setting user permissions."
+            text: "This includes inviting and removing users and setting user permissions.",
+            classes: "govuk-!-margin-bottom-6"
           },
           items: [
             {
