Iterations on the flow

--- a/app/views/users.html
+++ b/app/views/users.html
@@ -33,18 +33,21 @@
           <a class="govuk-link govuk-link--no-visited-state" href="/users/show">Ross Anderson</a>
         </h2>
         <p class="govuk-!-margin-bottom-0">ross.anderson@address.uk</p>
+        <p class="govuk-!-font-size-16 govuk-caption-m govuk-!-margin-bottom-0">Achieve with TELA, Beech Hill, TeachSlough</p>
       </div>
       <div class="app-application-card">
           <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
             <a class="govuk-link govuk-link--no-visited-state" href="#">Hermione Granger</a>
           </h2>
           <p class="govuk-!-margin-bottom-0">hermione.granger@address.uk</p>
+          <p class="govuk-!-font-size-16 govuk-caption-m govuk-!-margin-bottom-0">Achieve with TELA</p>
       </div>
       <div class="app-application-card">
         <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
           <a class="govuk-link govuk-link--no-visited-state" href="#">Billy Boyo</a>
         </h2>
         <p class="govuk-!-margin-bottom-0">billy.boyo@address.uk</p>
+        <p class="govuk-!-font-size-16 govuk-caption-m govuk-!-margin-bottom-0">Achieve with TELA</p>
       </div>
     </div>
   </div>
