--- a/app/views/users/manage-courses-2.html
+++ b/app/views/users/manage-courses-2.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
   {{ govukBackLink({
-    href: "/users/manage-users-1"
+    href: "/users/next-org"
   }) }}
 {% endblock %}
 
