--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -124,10 +124,12 @@
             <a href="/notifications">Email notifications</a>
           </h2>
           <p>Get email notifications about your courses</p> #}
-          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+
+          {# <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/users">Users</a>
           </h2>
-          <p>View users who manage your courses.</p>
+          <p>View users who manage your courses.</p> #}
+
           <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/ucas/apply-preferences">UCAS contacts</a>
           </h2>
