--- a/app/views/users/next-org.html
+++ b/app/views/users/next-org.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Permissions added' %}
+{% set title = 'You are now about to assign permissons for the next provider' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% set navActive = 'users' %}
 
@@ -14,12 +14,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-fieldset__legend--xl">
+      <h1 class="govuk-fieldset__legend--xl govuk-!-margin-bottom-8">
         <span class="govuk-caption-xl">Invite user</span>
         {{title}}
       </h1>
 
-      <p class="govuk-!-margin-bottom-8">You have finished setting permisisons for Achieve with TELA.</p>
+      <p>You have finished setting permisisons for Achieve with TELA.</p>
+      <p class="govuk-!-margin-bottom-8">You have one more provider to set permissons for.</p>
 
       <a href="/users/manage-courses-2" class="govuk-button">Continue to permissions for Beech Hill</a>
      
