--- a/app/views/users/organisations.html
+++ b/app/views/users/organisations.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Select the organisations this user can access' %}
+{% set title = 'Select the organisations this user requires access to' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% set navActive = 'users' %}
 
