--- a/app/views/users/_user-profile-ross.html
+++ b/app/views/users/_user-profile-ross.html
@@ -66,7 +66,7 @@
               text: "First name"
             },
             value: {
-              text: "Sally"
+              text: "Ross"
             },
             actions: {
               items: [
@@ -83,7 +83,7 @@
               text: "Last name"
             },
             value: {
-              text: "Salt"
+              text: "Anderson"
             },
             actions: {
               items: [
@@ -189,7 +189,7 @@
               text: "TeachSlough permissions"
             },
              value: {
-              html: permissionsCourses3Html
+              html: permissionsCourses1Html
             },
             actions: {
               items: [
