--- a/app/views/users.html
+++ b/app/views/users.html
@@ -10,11 +10,8 @@
     {% if showMessage %}
       <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
         <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
-          DfE has received your request to invite {{ data['request-first-name']}} {{ data['request-last-name'] }}.
+          Sally Salt has been emailed instructions to finalise setting up their account.
         </h3>
-        <p class="govuk-!-margin-bottom-0">
-          They will receive sign-up instructions if their account is approved.
-        </p>
       </div>
     {% endif %}
   {% endset %}
