--- a/app/views/users/delete-user.html
+++ b/app/views/users/delete-user.html
@@ -8,13 +8,13 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
         <span class="govuk-caption-xl">Ross Anderson</span>
-        Are you sure you want to delete this user’s account?
+        Are you sure you want to remove this user’s account?
       </h1>
       {# {{ govukButton({
         text: "Yes I’m sure - delete this account",
         classes: "govuk-button--warning"
       }) }} #}
-      <a href="#" role="button" draggable="false" class="govuk-button govuk-button--warning" data-module="govuk-button">Yes I’m sure - delete this user</a>
+      <a href="#" role="button" draggable="false" class="govuk-button govuk-button--warning" data-module="govuk-button">Yes I’m sure - remove this user</a>
     </div>
   </div>
 {% endblock %}
