--- a/app/views/users/_user-profile-ross.html
+++ b/app/views/users/_user-profile-ross.html
@@ -100,7 +100,7 @@
               text: "Email"
             },
             value: {
-              html: "sally.salt@co.uk"
+              html: "ross.andersons@co.uk"
             },
             actions: {
               items: [
