--- a/app/views/users.html
+++ b/app/views/users.html
@@ -10,7 +10,7 @@
     {% if showMessage %}
       <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
         <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
-          Sally Salt has been emailed instructions to finalise setting up their account.
+          Sally Salt has been sent instructions to set up their account.
         </h3>
       </div>
     {% endif %}
