--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -16,12 +16,12 @@
         </legend>
 
         <div class="govuk-!-margin-bottom-6">
-          <p>We'll tell you when a training provider:</p>
+          <p>You'll receive notifications for courses that you're the accredited body for when:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>publishes a new course on Find postgraduate teacher training</li>
-				    <li>makes a change to an existing course</li>
-				    <li>withdraws a course</li>
-				    <li>changes the vacancy status of a course</li>
+            <li>a new course is published to Find postgraduate teacher training</li>
+				    <li>a change to an existing course is made</li>
+				    <li>a course is withdrawn</li>
+				    <li>the vacancy status of a course is changed</li>
           </ul>
         </div>
 
