--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -31,6 +31,8 @@
 {% from "govuk/components/textarea/macro.njk"            import govukTextarea %}
 {% from "govuk/components/warning-text/macro.njk"        import govukWarningText %}
 
+{% import 'macros/macros.njk' as macros %}
+
 {% block head %}
   {% include "includes/head.html" %}
 {% endblock %}
