Upgrade prototype kit (#48)
Upgrade to Prototype Kit v9.4.0

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -4,19 +4,24 @@ $govuk-global-styles: true;
 // Not in design system:
 $button-colour: #00823b;
 
+// We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
+$govuk-assets-path: '/govuk/assets/';
+
 // Import GOV.UK Frontend and any extension styles if extensions have been configured
 @import "lib/extensions/extensions";
 
-// Take a look at in app/assets/sass/patterns/ to see which files are imported.
+// Patterns that aren't in Frontend
+@import "patterns/step-by-step-header";
+@import "patterns/step-by-step-nav";
+@import "patterns/step-by-step-related";
+@import "patterns/task-list";
+@import "patterns/related-items";
+
+// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 @import 'patterns/simplemde-theme';
 @import 'patterns/success-summary';
 @import "patterns/step-by-step-navigation";
-@import "patterns/task-list";
-@import "patterns/related-items";
 @import "patterns/destructive-button";
-
-// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
-
 @import "components/map";
 
 blockquote {
@@ -28,7 +33,7 @@ blockquote {
 }
 
 .not-running-notice {
-  border: 5px solid govuk-colour("grey-3");
+  border: 5px solid govuk-colour("light-grey");
   padding: 20px;
 }
 
@@ -58,14 +63,14 @@ table thead th {
 
 .phase-tag-no-content {
   background: govuk-colour("white");
-  color: govuk-colour("grey-1");
-  border: 2px solid lighten(govuk-colour("grey-1"), 10%);
+  color: govuk-colour("dark-grey");
+  border: 2px solid lighten(govuk-colour("dark-grey"), 10%);
   margin-top: -1px;
   margin-bottom: -1px;
 }
 
 .phase-tag-not-running {
-  background: govuk-colour("grey-3");
+  background: govuk-colour("light-grey");
   color: govuk-colour("black");
   margin-top: -1px;
   margin-bottom: -1px;
@@ -80,16 +85,16 @@ table thead th {
 }
 
 .empty {
-  color: govuk-colour("grey-1");
+  color: govuk-colour("dark-grey");
 }
 
 .status {
-  background: govuk-colour("grey-3");
+  background: govuk-colour("light-grey");
   padding: 20px;
 }
 
 .status-box {
-  background-color: govuk-colour("grey-4");
+  background-color: govuk-colour("light-grey");
   padding: 20px;
 }
 
@@ -211,7 +216,7 @@ dl.aligned.course-part-tasks dd {
   @include govuk-font($size: 19, $weight: bold);
   bottom: 7px;
   left: 15px;
-  relative: absolute;
+  position: absolute;
 }
 
 .autocomplete__menu {
@@ -334,7 +339,7 @@ dl.aligned.course-part-tasks dd {
   }
 
   .timeline-day-wrapper {
-    border-left: 5px solid govuk-colour("grey-2");
+    border-left: 5px solid govuk-colour("mid-grey");
     position: relative;
     margin-top: 10px;
   }
@@ -349,7 +354,7 @@ dl.aligned.course-part-tasks dd {
       content: " ";
       height: 5px;
       width: 15px;
-      background: govuk-colour("grey-2");
+      background: govuk-colour("mid-grey");
       display: inline-block;
       position: absolute;
       top: 10px;
