--- a/app/views/new-location/pick-location.html
+++ b/app/views/new-location/pick-location.html
@@ -58,7 +58,7 @@
   accessibleAutocomplete({
     element: document.querySelector('#my-autocomplete-container'),
     id: 'my-autocomplete', // To match it to the existing <label>.
-    source: createSimpleEngine(autocomplete_options),
+    source: createSimpleEngine(autocompleteOptions),
     name: '{{ code }}-location-picked',
     defaultValue: "{{ data[code + '-location-picked'] | safe }}",
     minLength: 2
