--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -46,9 +46,10 @@
 
   {{ govukHeader({
     homepageUrl: '#',
-    serviceName: serviceName,
+    productName: serviceName,
     serviceUrl: serviceUrl,
     containerClasses: "govuk-width-container",
+    navigationClasses: "govuk-header__navigation--end",
     navigation: [{
       href: "#",
       text: "Sign out (Jane Doe)"
